RESOLVED FIXED 265529
[WebGPU] Metal shader compilation should assert for fuzzer builds
https://bugs.webkit.org/show_bug.cgi?id=265529
Summary [WebGPU] Metal shader compilation should assert for fuzzer builds
Mike Wyrzykowski
Reported 2023-11-29 10:23:54 PST
[WebGPU] Metal shader compilation should assert for fuzzer builds
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-29 10:24:12 PST
Mike Wyrzykowski
Comment 2 2023-11-29 11:17:51 PST
EWS
Comment 3 2023-11-29 16:22:46 PST
Committed 271310@main (d8d8ad4f40f8): <https://commits.webkit.org/271310@main> Reviewed commits have been landed. Closing PR #21059 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.