[WebGPU] Metal shader compilation should assert for fuzzer builds https://bugs.webkit.org/show_bug.cgi?id=265529 <radar://118939290

Reviewed by Dan Glastonbury.

Add an assertion macro which will assert in fuzzing and asan builds.

Use it when shader compilation fails at the metal compiler level.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::createLibrary):
* Source/WebGPU/WebGPU/WebGPUExt.h:

Canonical link: https://commits.webkit.org/271310@main